--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 .btnControl {
-    background-color: rgba(228, 139, 56, 1);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 15px;
     font-size: 24px;
-    padding: 0 5px 0 5px;
+    padding: 6px 12px 6px 12px;
     transition: .2s;
     cursor: pointer;
-    border-color: rgb(182, 102, 28);
+    border-style: none;
 }
 
 .btnOffOn {
-    background-color: rgba(228, 139, 56, 1);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 15px;
-    padding: 0 5px 0 5px;
+    padding: 6px 12px 6px 12px;
     transition: .2s;
     cursor: pointer;
-    border-color: rgb(182, 102, 28);
+    border-style: none;
 }
 
 .btnControl:hover {
